# nezha-agent-rs

./: Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  build.rs.bak
.github/workflows/: linux.yaml  windows.yaml
proto/: nezha.proto
src/: args.rs  get_info.rs  main.rs  proto.rs  server_comm.rs
